k8s/calc-serv/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-serv-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: calc-serv
          image: oleglola/calc-serv:2
          ports:
            - containerPort: 8000
