k8s/calc-serv/app-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-serv-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8000
      targetPort: 8000
