k8s/calc-serv/worker-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: back
  ports:
    - port: 9000
      targetPort: 9000
